fix alignment in news

--- a/app/frontend/src/global.css
+++ b/app/frontend/src/global.css
@@ -145,3 +145,34 @@ body {
     display: table-cell;
   }
 }
+
+/* WordPress alignment helpers */
+.content .alignleft {
+  float: left;
+  margin: 0 1em 1em 0;
+}
+
+.content .alignright {
+  float: right;
+  margin: 0 0 1em 1em;
+}
+
+.content .alignnone {
+  display: inline-block;
+}
+
+.content .aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.content .wp-block-image {
+  display: inline-block;
+}
+
+.content::after {
+  content: "";
+  display: block;
+  clear: both;
+}
